    and runtimes builds
  * re-enable fixfilepath for use with dpkg-buildflags in debian/rules as it has
    been supported since clang-10
  * establish a consistent STAGE_[stage]_ prefix naming scheme for stage
    variables and replace STAGE1_AND_STAGE2_ prefix with STAGE_ALL_ prefix for
    better future-proofing in debian/rules
  * add explicit s390x build options to debian/rules, set
    LLVM_HOST_TRIPLE=s390x-linux-gnu and COMPILER_RT_DEFAULT_TARGET_ONLY=ON
    so that builtins are only built for the explicit host arch (Closes: #996802)

 -- Erik Maciejewski <mr.emacski@gmail.com>  Fri, 22 Oct 2021 03:12:48 -0700

llvm-toolchain-12 (1:12.0.1-13) unstable; urgency=medium

  * update rules to incorporate relevant arch specific configs from snapshot
  * patch llvm runtimes cmake build to add a check and only set up and build
    compiler-rt builtins if they have not been disabled in a runtimes build
  * patch compiler-rt builtins cmake build to fix default arch detection for
    armhf by adding the same target triple handling used for compiler-rt libs
  * remove legacy var for use when libcxx was a standalone build

 -- Erik Maciejewski <mr.emacski@gmail.com>  Wed, 20 Oct 2021 09:04:42 -0700

llvm-toolchain-12 (1:12.0.1-12) unstable; urgency=medium

  * re-disable building builtins on armel as they still fail (Closes: #996828)
  * add patch to libcxxabi cmake build for adding builtins to lib flags fixing
    an issue where builtins were not being linked into libcxxabi when
    LIBCXXABI_USE_COMPILER_RT=ON (Closes: #996796)

 -- Erik Maciejewski <mr.emacski@gmail.com>  Tue, 19 Oct 2021 01:28:50 -0700

llvm-toolchain-12 (1:12.0.1-11) unstable; urgency=medium

  * add missing LIBUNWIND_USE_COMPILER_RT to CLANG_BOOTSTRAP_PASSTHROUGH to link
    correct compiler-rt lib in stage2
  * consolidate two conditionals for libatomic that were essentially the same,
    but the one removed could conflict with BOOTSTRAP_SHARED_LINK_FLAGS
    elsewhere in the rules file