@@ -9,6 +9,7 @@ llvm-toolchain-12 (1:12.0.1-14) unstable; urgency=medium
   * establish a consistent STAGE_[stage]_ prefix naming scheme for stage
     variables and replace STAGE1_AND_STAGE2_ prefix with STAGE_ALL_ prefix for
     better future-proofing in debian/rules
+  * modify stage dir var names to use new prefix scheme in debian/rules
   * add explicit s390x build options to debian/rules, set
     LLVM_HOST_TRIPLE=s390x-linux-gnu and COMPILER_RT_DEFAULT_TARGET_ONLY=ON
     so that builtins are only built for the explicit host arch (Closes: #996802)
